--- a/README
+++ b/README
@@ -1,261 +1,140 @@
-== Welcome to Rails
+=============
+Tracker_Poker
+=============
 
-Rails is a web-application framework that includes everything needed to create
-database-backed web applications according to the Model-View-Control pattern.
+repo   :: https://github.com/EmeraldCityProgrammingGroup/tracker_poker
+heroku :: http://tracker-poker.herokuapp.com/
 
-This pattern splits the view (also called the presentation) into "dumb"
-templates that are primarily responsible for inserting pre-built data in between
-HTML tags. The model contains the "smart" domain objects (such as Account,
-Product, Person, Post) that holds all the business logic and knows how to
-persist themselves to a database. The controller handles the incoming requests
-(such as Save New Account, Update Product, Show Post) by manipulating the model
-and directing data to the view.
+===========
+DESCRIPTION
+===========
 
-In Rails, the model is handled by what's called an object-relational mapping
-layer entitled Active Record. This layer allows you to present the data from
-database rows as objects and embellish these data objects with business logic
-methods. You can read more about Active Record in
-link:files/vendor/rails/activerecord/README.html.
+Tracker_Poker is a way to automate the planning poker 
+meeting on an Agile project using a mobile phone.
 
-The controller and view are handled by the Action Pack, which handles both
-layers by its two parts: Action View and Action Controller. These two layers
-are bundled in a single package due to their heavy interdependence. This is
-unlike the relationship between the Active Record and Action Pack that is much
-more separate. Each of these packages can be used independently outside of
-Rails. You can read more about Action Pack in
-link:files/vendor/rails/actionpack/README.html.
+Tracker_Poker is still in early development, so now 
+is the time to make your mark on the project.
 
+=================
+FEATURES/PROBLEMS
+=================
 
-== Getting Started
+* TBD
 
-1. At the command prompt, create a new Rails application:
-       <tt>rails new myapp</tt> (where <tt>myapp</tt> is the application name)
+========
+SYNOPSYS
+========
 
-2. Change directory to <tt>myapp</tt> and start the web server:
-       <tt>cd myapp; rails server</tt> (run with --help for options)
+* % TBD/USAGE
 
-3. Go to http://localhost:3000/ and you'll see:
-       "Welcome aboard: You're riding Ruby on Rails!"
+=======
+INSTALL
+=======
 
-4. Follow the guidelines to start developing your application. You can find
-the following resources handy:
+    # Checkout the project
+    $ git clone git://github.com/EmeraldCityProgrammingGroup/tracker_poker
+    $ cd tracker_project
+    
+    # Install the project dependencies
+    $ gem install bundler
+    # If you do not have postgres installed, use this:
+    $ bundle install --without production 
+    # If you do have postgres installed, use this:
+    $ bundle install
 
-* The Getting Started Guide: http://guides.rubyonrails.org/getting_started.html
-* Ruby on Rails Tutorial Book: http://www.railstutorial.org/
+    # Set up the development database.
+    $ rake db:migrate
 
+    # Start the local web server
+    $ rails server
 
-== Debugging Rails
+    You should then be able to navigate to `http://localhost:3000/` in a web browser.
 
-Sometimes your application goes wrong. Fortunately there are a lot of tools that
-will help you debug it and get it back on the rails.
+=============
+HERKOKU SETUP
+=============
 
-First area to check is the application log files. Have "tail -f" commands
-running on the server.log and development.log. Rails will automatically display
-debugging and runtime information to these files. Debugging info will also be
-shown in the browser on requests from 127.0.0.1.
+    If you wish to host a publicly available copy of Tracker_Poker,
+    the easiest option is to host it on [Heroku](http://heroku.com/).
 
-You can also log your own messages directly into the log file from your code
-using the Ruby logger class from inside your controllers. Example:
+    # Make sure you have the Heroku gem
+    $ gem install heroku
 
-  class WeblogController < ActionController::Base
-    def destroy
-      @weblog = Weblog.find(params[:id])
-      @weblog.destroy
-      logger.info("#{Time.now} Destroyed Weblog ID ##{@weblog.id}!")
-    end
-  end
+    # Create your app. Replace APPNAME with whatever you want to name it.
+    $ heroku create APPNAME --stack bamboo-mri-1.9.2
+   
+    # Define where the user emails will be coming from
+    # (This email address does not need to exist)
+    $ heroku config:add MAILER_SENDER=noreply@example.org
 
-The result will be a message in your log file along the lines of:
+    # Allow emails to be sent
+    $ heroku addons:add sendgrid:starter
 
-  Mon Oct 08 14:22:29 +1000 2007 Destroyed Weblog ID #1!
+    # Deploy the first version
+    $ git push heroku master
 
-More information on how to use the logger is at http://www.ruby-doc.org/core/
+    To deploy it to Heroku, make sure you have a local copy of the 
+    project; refer to the previous section for instuctions. Then:
 
-Also, Ruby documentation can be found at http://www.ruby-lang.org/. There are
-several books available online as well:
+    # Set up the database
+    $ heroku rake db:setup
 
-* Programming Ruby: http://www.ruby-doc.org/docs/ProgrammingRuby/ (Pickaxe)
-* Learn to Program: http://pine.fm/LearnToProgram/ (a beginners guide)
+    Once that's done, you will be able to view your site at 
+    `http://APPNAME.heroku.com`.
 
-These two books will bring you up to speed on the Ruby language and also on
-programming in general.
+=============
+TO CONTRIBUTE
+=============
 
+Tracker_Poker is currently welcoming contributions.  If you'd like to help:
 
-== Debugger
+Here are some general guidelines for contributing:
 
-Debugger support is available through the debugger command when you start your
-Mongrel or WEBrick server with --debugger. This means that you can break out of
-execution at any point in the code, investigate and change the model, and then,
-resume execution! You need to install ruby-debug to run the server in debugging
-mode. With gems, use <tt>sudo gem install ruby-debug</tt>. Example:
+* Check the [issue queue] in Pivotal Tracker TBD-URL
+    for a list of the major features which are yet to be implemented.
+    These have the `feature` and `unstarted` labels.  If a feature
+    you'd like isn't there, add  an issue.
+* If you'd like to take ownership of one of the features, leave a
+    comment on the issue queue indicating that you're working on it.
 
-  class WeblogController < ActionController::Base
-    def index
-      @posts = Post.all
-      debugger
-    end
-  end
+* If you'd like to discuss anything about the issue with other
+    developers, do so on the [Emerald Programming Group]
+    (http://groups.google.com/group/TBD) mailing list.
 
-So the controller will accept the action, run the first line, then present you
-with a IRB prompt in the server window. Here you can do things like:
+* Fork github project: 
+    https://github.com/EmeraldCityProgrammingGroup/tracker_poker
+* Make your changes on a branch, and use that branch as the base
+    for pull requests.
+* We encourage you try to break changes up into the smallest logical
+    blocks possible. We would prefer to receive many small commits
+    to one large  one in a pull request.
+* Feel free to open unfinished pull requests if you'd like to discuss
+    work in progress, or would like other developers to test it.
+* All patches changes need to be covered by tests and should not
+    break the existing tests, unless a current test is invalidated
+    by a code change. 
 
-  >> @posts.inspect
-  => "[#<Post:0x14a6be8
-          @attributes={"title"=>nil, "body"=>nil, "id"=>"1"}>,
-       #<Post:0x14a6620
-          @attributes={"title"=>"Rails", "body"=>"Only ten..", "id"=>"2"}>]"
-  >> @posts.first.title = "hello from a debugger"
-  => "hello from a debugger"
+* Read over documentation.
 
-...and even better, you can examine how your runtime objects actually work:
+* Run `rake test` to check the Rails test suite is green.  
 
-  >> f = @posts.first
-  => #<Post:0x13630c4 @attributes={"title"=>nil, "body"=>nil, "id"=>"1"}>
-  >> f.
-  Display all 152 possibilities? (y or n)
+* If you have any questions please post them to the <emerald city> group.
 
-Finally, when you're ready to resume execution, you can enter "cont".
+* Also attend the <emerald city> Saturday classes.
 
+=======
+LICENSE
+=======
 
-== Console
+* **Please put your open source license here.**
+* **If you need help, check out this: http://www.opensource.org/licenses **
 
-The console is a Ruby shell, which allows you to interact with your
-application's domain model. Here you'll have all parts of the application
-configured, just like it is when the application is running. You can inspect
-domain models, change values, and save to the database. Starting the script
-without arguments will launch it in the development environment.
+=============
+README FORMAT
+=============
 
-To start the console, run <tt>rails console</tt> from the application
-directory.
-
-Options:
-
-* Passing the <tt>-s, --sandbox</tt> argument will rollback any modifications
-  made to the database.
-* Passing an environment name as an argument will load the corresponding
-  environment. Example: <tt>rails console production</tt>.
-
-To reload your controllers and models after launching the console run
-<tt>reload!</tt>
-
-More information about irb can be found at:
-link:http://www.rubycentral.org/pickaxe/irb.html
+See http://docutils.sourceforge.net/docs/user/rst/quickref.html
+for more information about the format used in the file. It is 
+called **Restructured Text**.
 
 
-== dbconsole
-
-You can go to the command line of your database directly through <tt>rails
-dbconsole</tt>. You would be connected to the database with the credentials
-defined in database.yml. Starting the script without arguments will connect you
-to the development database. Passing an argument will connect you to a different
-database, like <tt>rails dbconsole production</tt>. Currently works for MySQL,
-PostgreSQL and SQLite 3.
-
-== Description of Contents
-
-The default directory structure of a generated Ruby on Rails application:
-
-  |-- app
-  |   |-- assets
-  |       |-- images
-  |       |-- javascripts
-  |       `-- stylesheets
-  |   |-- controllers
-  |   |-- helpers
-  |   |-- mailers
-  |   |-- models
-  |   `-- views
-  |       `-- layouts
-  |-- config
-  |   |-- environments
-  |   |-- initializers
-  |   `-- locales
-  |-- db
-  |-- doc
-  |-- lib
-  |   `-- tasks
-  |-- log
-  |-- public
-  |-- script
-  |-- test
-  |   |-- fixtures
-  |   |-- functional
-  |   |-- integration
-  |   |-- performance
-  |   `-- unit
-  |-- tmp
-  |   |-- cache
-  |   |-- pids
-  |   |-- sessions
-  |   `-- sockets
-  `-- vendor
-      |-- assets
-          `-- stylesheets
-      `-- plugins
-
-app
-  Holds all the code that's specific to this particular application.
-
-app/assets
-  Contains subdirectories for images, stylesheets, and JavaScript files.
-
-app/controllers
-  Holds controllers that should be named like weblogs_controller.rb for
-  automated URL mapping. All controllers should descend from
-  ApplicationController which itself descends from ActionController::Base.
-
-app/models
-  Holds models that should be named like post.rb. Models descend from
-  ActiveRecord::Base by default.
-
-app/views
-  Holds the template files for the view that should be named like
-  weblogs/index.html.erb for the WeblogsController#index action. All views use
-  eRuby syntax by default.
-
-app/views/layouts
-  Holds the template files for layouts to be used with views. This models the
-  common header/footer method of wrapping views. In your views, define a layout
-  using the <tt>layout :default</tt> and create a file named default.html.erb.
-  Inside default.html.erb, call <% yield %> to render the view using this
-  layout.
-
-app/helpers
-  Holds view helpers that should be named like weblogs_helper.rb. These are
-  generated for you automatically when using generators for controllers.
-  Helpers can be used to wrap functionality for your views into methods.
-
-config
-  Configuration files for the Rails environment, the routing map, the database,
-  and other dependencies.
-
-db
-  Contains the database schema in schema.rb. db/migrate contains all the
-  sequence of Migrations for your schema.
-
-doc
-  This directory is where your application documentation will be stored when
-  generated using <tt>rake doc:app</tt>
-
-lib
-  Application specific libraries. Basically, any kind of custom code that
-  doesn't belong under controllers, models, or helpers. This directory is in
-  the load path.
-
-public
-  The directory available for the web server. Also contains the dispatchers and the
-  default HTML files. This should be set as the DOCUMENT_ROOT of your web
-  server.
-
-script
-  Helper scripts for automation and generation.
-
-test
-  Unit and functional tests along with fixtures. When using the rails generate
-  command, template test files will be generated for you and placed in this
-  directory.
-
-vendor
-  External libraries that the application depends on. Also includes the plugins
-  subdirectory. If the app has frozen rails, those gems also go here, under
-  vendor/rails/. This directory is in the load path.
